Renaming the tests plus some minor comments

--- a/tests/ocf-url_link-path-absolute/EPUB/content_001.xhtml
+++ b/tests/ocf-url_link-path-absolute/EPUB/content_001.xhtml
@@ -1,16 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Path-absolute links</title>
+    <title>PPath-absolute link to an image</title>
     <style>
       figure {
         text-align: center
       }
       img {
         width: 60%;
-      }
-      figcaption {
-        font-size: smaller;
-        font-style: italic;
       }
     </style>
   </head>
