--- a/tests/ocf-url_link-leaking-relative/EPUB/nav.xhtml
+++ b/tests/ocf-url_link-leaking-relative/EPUB/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Path-absolute links</title>
+    <title>Relative image reference exceeds depth of hierarchy</title>
   </head>
   <body>
     <nav epub:type="toc">
