--- a/tests/ocf-url_link-relative/EPUB/content_001.xhtml
+++ b/tests/ocf-url_link-relative/EPUB/content_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Potentially leaking relative link</title>
+    <title>Simple relative link to an image</title>
     <style>
       figure {
         text-align: center
@@ -8,16 +8,12 @@
       img {
         width: 60%;
       }
-      figcaption {
-        font-size: smaller;
-        font-style: italic;
-      }
     </style>
   </head>
   <body>
     <p>Test passes if the photo of the medieval monastery appears below.</p>
     <figure>
-      <img src="../../../../media/imgs/monastery.jpg" alt="Photo of a large medieval building with a church bell tower on its left end." />
+      <img src="../media/imgs/monastery.jpg" alt="Photo of a large medieval building with a church bell tower on its left end." />
       <figcaption>Photograph of a medieval monastery</figcaption>
     </figure>
   </body>
