Taking care of Dan's comments

--- a/tests/scr-support_origin/EPUB/content_001.xhtml
+++ b/tests/scr-support_origin/EPUB/content_001.xhtml
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
     <head>
         <meta charset="utf-8"/>
-        <title>Check origin for scripted contents — 1</title>
+        <title>Unique origin shared by spine-level scripted contents — 1</title>
         <script src="js/display_origin.js"></script>
     </head>
     <body>
         <p id="no_scripting" style="display: block">This reading system does not support scripting, which is necessary for this test to run.</p>
 
         <div id="scripting" style="display:none">
-            <p>The test passes if the value below and the corresponding value in the <a href="content_002.xhtml">adjacent file</a> are identical.</p>
+            <p>The test passes if the value below and the corresponding value in the <a href="content_002.xhtml">adjacent page</a> are identical.</p>
             <dl>
                 <dt>Origin URL:</dt>
                 <dd id="origin"></dd>
