--- a/tests/ocf-url_origin/EPUB/content_001.xhtml
+++ b/tests/ocf-url_origin/EPUB/content_001.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
     <head>
         <meta charset="utf-8"/>
-        <title>Check origin value</title>
+        <title>Unique origin for each instance</title>
         <script type="text/javascript">
             function test_url() {
                 try {
@@ -21,7 +21,7 @@
         <p id="no_scripting" style="display: block">This reading system does not support scripting, which is necessary for this test to run.</p>
 
         <div id="scripting" style="display:none">
-            <p>If the publication is displayed by two different users, and the origin URLs below are <em>different</em>, the test passes.</p>
+            <p>Two different users must run this test with the same reading system. If the publication is displayed by two different users, and the origin URLs below are <em>different</em>, the test passes.</p>
             <dl>
                 <dt>Origin URL:</dt>
                 <dd id="origin"></dd>
