--- a/tests/ocf-url_parse-leaking-relative/EPUB/nav.xhtml
+++ b/tests/ocf-url_parse-leaking-relative/EPUB/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Parse a potentially leaking relative URL</title>
+    <title>Relative URL that exceeds depth of hierarchy, parsed by JS</title>
   </head>
   <body>
     <nav epub:type="toc">
