--- a/tests/css-epub-line-break/EPUB/content_001.xhtml
+++ b/tests/css-epub-line-break/EPUB/content_001.xhtml
@@ -1,24 +1,61 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
     <title>EPUB CSS Line Break</title>
+
+    <style>
+      p.test {
+        white-space: nowrap;
+      }
+
+      p.wrapbox { 
+        width: 10em; 
+        margin: 0.5em; 
+        white-space: normal; 
+        vertical-align: top; 
+        display: inline-block; 
+      }
+
+      p.auto { 
+        -epub-line-break: auto; 
+      }
+
+      p.loose { 
+        -epub-line-break: loose; 
+      }
+
+      p.normal { 
+        -epub-line-break: normal; 
+      }
+
+      p.strict { 
+        -epub-line-break: strict; 
+      }
+    </style>
   </head>
   <body>
     <h1>-epub-line-break Tests</h1>
 
-    <p>1. This test passes if the following block of text adjusts line breaks to fit across the viewport, even when viewport or font size changes.</p>
+    <p>Instructions: All conditions of this test book must pass for the feature to pass. If any test fails, mark this section as a fail in the implementation report.</p>
 
-    <p style="margin: 1em; -epub-line-break: auto;">There was no possibility of taking a walk that day. We had been wandering, indeed, in the leafless shrubbery an hour in the morning; but since dinner (Mrs. Reed, when there was no company, dined early) the cold winter wind had brought with it clouds so sombre, and a rain so penetrating, that further outdoor exercise was now out of the question.</p>
+    <p>For all of the tests to pass, line breaks should occur <em>before</em> the characters "々" or "ぁ". These characters should not appear at the end of a line.</p>
 
-    <p>2. This test passes if the following block of text adjusts line breaks to fit across the viewport, even when viewport or font size changes.</p>
+    <p>1. <code>-epub-line-break: auto;</code>: This test passes if the following block of text breaks to a new line at the end of the viewport, no text is outside of the viewport, and line breaks update when the font size or viewport size changes.</p>
 
-    <p style="margin: 1em; -epub-line-break: loose;">I was glad of it: I never liked long walks, especially on chilly afternoons: dreadful to me was the coming home in the raw twilight, with nipped fingers and toes, and a heart saddened by the chidings of Bessie, the nurse, and humbled by the consciousness of my physical inferiority to Eliza, John, and Georgiana Reed.</p>
+    <p class="test wrapbox auto" lang="jp">auto:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
 
-    <p>3. This test passes if the following block of text adjusts line breaks to fit across the viewport, even when viewport or font size changes.</p>
+    <p>2. <code>-epub-line-break: loose;</code>: This test passes if the following block of text breaks to a new line at the end of the viewport, no text is outside of the viewport, and line breaks update when the font size or viewport size changes.</p>
 
-    <p style="margin: 1em; -epub-line-break: normal;">The said Eliza, John, and Georgiana were now clustered round their mama in the drawing-room: she lay reclined on a sofa by the fireside, and with her darlings about her (for the time neither quarrelling nor crying) looked perfectly happy. Me, she had dispensed from joining the group; saying, “She regretted to be under the necessity of keeping me at a distance; but that until she heard from Bessie, and could discover by her own observation, that I was endeavouring in good earnest to acquire a more sociable and childlike disposition, a more attractive and sprightly manner—something lighter, franker, more natural, as it were—she really must exclude me from privileges intended only for contented, happy, little children.”</p>
+    <p class="test wrapbox loose" lang="jp">loose:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
 
-    <p>4. This test passes if the following block of text adjusts line breaks to fit across the viewport, even when viewport or font size changes.</p>
+    <p>3. <code>-epub-line-break: normal;</code>: This test passes if the following block of text breaks to a new line at the end of the viewport, no text is outside of the viewport, and line breaks update when the font size or viewport size changes.</p>
 
-    <p style="margin: 1em; -epub-line-break: strict;">Folds of scarlet drapery shut in my view to the right hand; to the left were the clear panes of glass, protecting, but not separating me from the drear November day. At intervals, while turning over the leaves of my book, I studied the aspect of that winter afternoon. Afar, it offered a pale blank of mist and cloud; near a scene of wet lawn and storm-beat shrub, with ceaseless rain sweeping away wildly before a long and lamentable blast.</p>
+    <p class="test wrapbox normal" lang="jp">normal:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
+
+    <p>4. <code>-epub-line-break: strict;</code>: This test passes if the following block of text breaks to a new line at the end of the viewport, no text is outside of the viewport, and line breaks update when the font size or viewport size changes.</p>
+
+    <p class="test wrapbox strict" lang="jp">strict:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
+
+    <!--Text examples borrowed from the MDN page on CSS line-break, which only applies to CJK characters.-->
+    
   </body>
 </html>
