--- a/tests/css-epub-text-combine-horizontal/EPUB/content_001.xhtml
+++ b/tests/css-epub-text-combine-horizontal/EPUB/content_001.xhtml
@@ -5,11 +5,13 @@
   <body>
     <h1>-epub-text-combine-horizontal Tests</h1>
 
-    <p>1. This test passes if the text below renders vertically with each number appearing individually.</p>
+    <p>Instructions: All conditions of this test book must pass for the feature to pass. If any test fails, mark this section as a fail in the implementation report.</p>
+
+    <p>1. This test passes if the text below renders vertically with each digit appearing individually.</p>
 
     <p style="margin: 1em; -epub-text-combine-horizontal: none; writing-mode: vertical-lr">これはテストです101112。</p>
     
-    <p>2. This test passes if the text below renders vertically with pairs of numbers appearing in the space of a single character.</p>
+    <p>2. This test passes if the text below renders vertically with pairs of digits appearing in the space of a single character.</p>
 
     <p style="margin: 1em; -epub-text-combine-horizontal: all; writing-mode: vertical-lr;">これはテストです101112。</p>
     
