--- a/tests/css-epub-text-emphasis/EPUB/content_001.xhtml
+++ b/tests/css-epub-text-emphasis/EPUB/content_001.xhtml
@@ -14,7 +14,9 @@
   <body>
     <h1>-epub-text-emphasis-* Tests</h1>
 
-    <p>Note: the -epub-text-emphasis-* properties are reliant on one another, so all three are being tested together, with criteria for affirming each property.</p>
+    <p>Note: For this test, the font settings should be set to the "publisher default" setting, or whatever setting displays the embedded font.</p>
+
+    <p>Instructions: All conditions of this test book must pass for the feature to pass. If any test fails, mark this section as a fail in the implementation report.</p>
 
     <p>1. This test passes if the emphasis marks appear as solid dots over the text below. If the marks do not appear, all of the following tests fail.</p>
 
