--- a/tests/css-epub-text-underline-position/EPUB/content_001.xhtml
+++ b/tests/css-epub-text-underline-position/EPUB/content_001.xhtml
@@ -5,6 +5,8 @@
   <body>
     <h1>-epub-text-underline-position Tests</h1>
 
+    <p>Instructions: All conditions of this test book must pass for the feature to pass. If any test fails, mark this section as a fail in the implementation report.</p>
+
     <p>1. This test passes if the underline sits at the baseline of the text below. (Letters with descenders like "p", "g", and "y" should extend past the underline).</p>
 
     <p style="margin: 1em; margin: 1em; -epub-text-underline-position: auto;"> Lo! the Spear-Danes' glory through splendid achievements</p>
