--- a/tests/css-epub-writing-mode/EPUB/content_001.xhtml
+++ b/tests/css-epub-writing-mode/EPUB/content_001.xhtml
@@ -5,6 +5,8 @@
   <body>
     <h1>-epub-writing-mode Tests</h1>
 
+    <p>Instructions: All conditions of this test book must pass for the feature to pass. If any test fails, mark this section as a fail in the implementation report.</p>
+
     <p style="margin: 1em; -epub-writing-mode: horizontal-tb">1. これはテストです。This test passes if this text renders horizontally.</p>
 
     <p style="margin: 1em; -epub-writing-mode: vertical-rl">2. これはテストです。This test passes if this text renders vertically starting from the right-hand side of the page.</p>
