--- a/tests/css-epub-text-transform/EPUB/content_001.xhtml
+++ b/tests/css-epub-text-transform/EPUB/content_001.xhtml
@@ -7,6 +7,6 @@
 
     <p>1. This test passes if the English letters appear at the same width and orientation as the Japanese characters.</p>
 
-    <p style="margin: 1em; writing-mode: vertical-lr; text-transform: -epub-fullwidth;">これはテストです。123456abcdef</p>
+    <p style="margin: 1em; writing-mode: vertical-lr; text-transform: -epub-fullwidth;">これはテストです。<br />123456abcdef</p>
   </body>
 </html>
