building EPUBs and fixing errors

--- a/tests/css-epub-hyphens/EPUB/content_001.xhtml
+++ b/tests/css-epub-hyphens/EPUB/content_001.xhtml
@@ -21,7 +21,7 @@
 
     <p>2. This test passes if hyphens appear in the any of these words in the following block of text: artist, express, everything, language, instruments, virtue, materials, musician, feeling, surface, or symbol.</p>
 
-    <p style="margin: 1em; -epub-hyphens: manual;">The art&shy;ist can ex&shy;press every&shy;thing. Thought and lang&shy;uage are to the art&shy;ist instru&shy;ments of an art. Vice and vir&shy;tue are to the art&shy;ist mater&shy;ials for an art. From the point of view of form, the type of all the arts is the art of the music&shy;ian. From the point of view of feel&shy;ing, the actor’s craft is the type. All art is at once sur&shy;face and sym&shy;bol.</p>
+    <p style="margin: 1em; -epub-hyphens: manual;">The art&#xAD;ist can ex&#xAD;press every&#xAD;thing. Thought and lang&#xAD;uage are to the art&#xAD;ist instru&#xAD;ments of an art. Vice and vir&#xAD;tue are to the art&#xAD;ist mater&#xAD;ials for an art. From the point of view of form, the type of all the arts is the art of the music&#xAD;ian. From the point of view of feel&#xAD;ing, the actor’s craft is the type. All art is at once sur&#xAD;face and sym&#xAD;bol.</p>
 
     <p>3. This test passes if hyphens appear in the following block of text.</p>
 
