--- a/tests/page-layout-both-spread/EPUB/page_005.xhtml
+++ b/tests/page-layout-both-spread/EPUB/page_005.xhtml
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p4">
-  	<p>Page 4. This page should render as reflowable.</p>
+  	<p>Page 5. This test passes if this page renders as a fixed-layout page on the left hand side of the spread.</p>
   </body>
 </html>
