--- a/tests/page-layout-both-spread/EPUB/page_003.xhtml
+++ b/tests/page-layout-both-spread/EPUB/page_003.xhtml
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p3">
-    <p>Page 3. This test passes if the previous page renders as a reflowable document on the left side of a synthetic spread.</p>
+    <p>Page 3. This test passes if the previous page renders as a reflowable document on the left side of a synthetic spread, and this page appears immediately after with no blank page between.</p>
   </body>
 </html>
