fixing the nav file

--- a/tests/page-layout-both-spread/EPUB/nav.xhtml
+++ b/tests/page-layout-both-spread/EPUB/nav.xhtml
@@ -9,6 +9,7 @@
         <li><a href="page_002.xhtml">Page 2</a></li>
         <li><a href="page_003.xhtml">Page 3</a></li>
         <li><a href="page_004.xhtml">Page 4</a></li>
+        <li><a href="page_005.xhtml">Page 5</a></li>
       </ol>
     </nav>
   </body>
