--- a/tests/mol-rendering-audio/EPUB/nav.xhtml
+++ b/tests/mol-rendering-audio/EPUB/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Media Overlays Tests: Rendering Audio</title>
+    <title>Media overlays render audio</title>
   </head>
   <body>
     <nav epub:type="toc">
