--- a/tests/mol-navigation/EPUB/ch2.xhtml
+++ b/tests/mol-navigation/EPUB/ch2.xhtml
@@ -1,14 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-
-    <head>
-        <meta charset="utf-8" />
-        <title>Chapter 2</title>
-        <link rel="stylesheet" type="text/css" href="css/base.css" />
-    </head>
-
-    <body id="body">
-        <h1 id="mo-1">Chapter 2</h1>
-        <p id="mo-2">The test passes if this page plays when "Chapter 2" is selected from the table of contents.</p>
-    </body>
-
+  <head>
+    <title>Media overlay with navigation</title>
+    <link rel="stylesheet" type="text/css" href="css/base.css" />
+  </head>
+  <body id="body">
+    <h1 id="mo-1">Chapter 2</h1>
+    <p id="mo-2">The test passes if this page plays when "Chapter 2" is selected from the table of contents.</p>
+  </body>
 </html>
