Apply suggestions from code review
Co-authored-by: Dan Lazin <dlazin@users.noreply.github.com>

--- a/tests/scr-support_scrolled-doc/EPUB/content_001.xhtml
+++ b/tests/scr-support_scrolled-doc/EPUB/content_001.xhtml
@@ -22,7 +22,7 @@
 		<section id="flow-015">
 			<h2>Scrolled Flow</h2>
 			<div id="no_scripting" style="display: block">
-				<p>This reading system does not support scripting. The test is not relevant, and can be marked as "null" in the report</p>
+				<p>This reading system does not support scripting. The test is not relevant, and can be marked as "null" in the report.</p>
 			</div>
 			<div id="scripting" style="display: none">
 				<p>
