--- a/tests/scr-support_scrolled-continuous/EPUB/content_001.xhtml
+++ b/tests/scr-support_scrolled-continuous/EPUB/content_001.xhtml
@@ -22,12 +22,12 @@
 		<section id="flow-015">
 			<h2>Scrolled Flow</h2>
 			<div id="no_scripting" style="display: block">
-				<p>This reading system does not support scripting. The test is not relevant, and can be marked as "null" in the report</p>
+				<p>This reading system does not support scripting. The test is not relevant, and can be marked as "null" in the report.</p>
 			</div>
 			<div id="scripting" style="display: none">
 				<p>
 					Tests whether setting the global <code>rendition:flow</code> property to <code>scrolled-doc</code> results in
-					scrollable documents in the case when scripted is supported by the reading system. 
+					scrollable documents when scripting is supported. 
 					The test passes if each of the documents in this publication is vertically scrollable, and swiping horizontally moves from one to
 					the next.
 				</p>
