Made all the changes based on Dan's comments.

--- a/tests/scr-support_scrolled-continuous/EPUB/content_001.xhtml
+++ b/tests/scr-support_scrolled-continuous/EPUB/content_001.xhtml
@@ -16,7 +16,7 @@
 			}
 			window.addEventListener('load', test);
 		</script>
-		<title>rendition:flow set to scrolled-doc when scripting is supported</title>
+		<title>rendition:flow set to scrolled-continuous when scripting is supported</title>
 	</head>
 	<body>
 		<section id="flow-015">
@@ -26,10 +26,9 @@
 			</div>
 			<div id="scripting" style="display: none">
 				<p>
-					Tests whether setting the global <code>rendition:flow</code> property to <code>scrolled-doc</code> results in
-					scrollable documents when scripting is supported. 
-					The test passes if each of the documents in this publication is vertically scrollable, and swiping horizontally moves from one to
-					the next.
+					Tests whether setting the global <code>rendition:flow</code> property to <code>scrolled-continuous</code> results in
+					scrollable publication in the case when scripted is supported by the reading system. 
+					The test passes if the publication is presented as one continuous scroll from spine item to spine item.
 				</p>
 				<p>
 					<em>
