--- a/tests/scr-support_scrolled-continuous/EPUB/content_004.xhtml
+++ b/tests/scr-support_scrolled-continuous/EPUB/content_004.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en" lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>rendition:flow set to scrolled-doc when scripting is supported: chapter 3</title>
+		<title>rendition:flow set to scrolled-continuous when scripting is supported: chapter 3</title>
 	</head>
 	<body>
 		<section>
