--- a/tests/scr-support_scrolled-doc/EPUB/content_001.xhtml
+++ b/tests/scr-support_scrolled-doc/EPUB/content_001.xhtml
@@ -26,9 +26,10 @@
 			</div>
 			<div id="scripting" style="display: none">
 				<p>
-					Tests whether setting the global <code>rendition:flow</code> property to <code>scrolled-continuous</code> results in
-					scrollable publication in the case when scripted is supported by the reading system. 
-					The test passes if the publication is presented as one continuous scroll from spine item to spine item.
+					Tests whether setting the global <code>rendition:flow</code> property to <code>scrolled-doc</code> results in
+					scrollable documents when scripting is supported. 
+					The test passes if each of the documents in this publication is vertically scrollable, and swiping horizontally moves from one to
+					the next.
 				</p>
 				<p>
 					<em>
