Opening the link should also ask for user's consent

--- a/tests/pub-external-links/EPUB/content_001.xhtml
+++ b/tests/pub-external-links/EPUB/content_001.xhtml
@@ -3,7 +3,7 @@
     <title>External Links open a new browser instance</title>
   </head>
   <body>
-    <p>Test passes if the following link opens in a new browser instance.</p>
+    <p>Test passes if the following link opens in a new browser instance after asking the reader's consent.</p>
     <a href="https://www.w3.org/TR/epub-rs-33/#sec-epub-rs-external-links">External Links</a>
   </body>
 </html>
