Added a remark on the optionality of the test in linked records.

--- a/tests/pkg-linked-records/EPUB/content_001.xhtml
+++ b/tests/pkg-linked-records/EPUB/content_001.xhtml
@@ -4,6 +4,9 @@
   </head>
   <body>
     <h1>Reading System does not skip processing package metadata when a linked metadata record is present</h1>
+
+    <p>This test is only relevant if the reading system supports linked resources. If that is not the case, the relevant entry in the implementation report should be set to <code>null</code>.</p>
+
     <p>This epub contains both package <code>metadata</code> elements as well as a linked ONIX 3.0 record. The linked ONIX 3.0 record contains neither title nor creator data.</p>
     <p>This test passes if the Reading System displays the epub's title as <b>Package metadata title!</b> and displays the epub's creator as <b>Matthew Chan</b>.</p>
   </body>
