--- a/tests/scr-readingsystem-support_iframe/EPUB/iframe_content.xhtml
+++ b/tests/scr-readingsystem-support_iframe/EPUB/iframe_content.xhtml
@@ -19,11 +19,7 @@
           if (ers !== undefined) {
             const div_pass = document.getElementById('pass');
             const div_fail = document.getElementById('fail');
-            const ers_name = document.getElementById('ers_name');
-            const ers_version = document.getElementById('ers_version');
 
-            ers_name.innerText = ers.name;
-            ers_version.innerText = ers.version;
             div_fail.style.display = 'none';
             div_pass.style.display = 'block';
           }
@@ -41,12 +37,7 @@
     </div>
 
     <div id="pass" style="display: none">
-      <p>The Reading System implements the <code>epubReadingSystem</code> object within an <code>iframe</code>, with the following properties:</p>
-      <ul>
-        <li>Reading System Name: <span id="ers_name"></span></li>
-        <li>Reading System Version: <span id="ers_version"></span></li>
-      </ul>
-      <p>Test passes, unless one of the two values are set to <code>undefined</code>.</p>
+      <p>The Reading System implements the <code>epubReadingSystem</code> object within an <code>iframe</code>. Test passes.</p>
     </div>
 
   </body>
