Added a warning that the text is long and requires several pages.

--- a/tests/fxl-spine-overrides_behave-as-global/EPUB/page_002.xhtml
+++ b/tests/fxl-spine-overrides_behave-as-global/EPUB/page_002.xhtml
@@ -3,6 +3,7 @@
     <title>Rendition Override — reflowable page</title>
   </head>
   <body>
+    <p>(This text is long, and usually requires several pages to be displayed.)</p>
     <h1>Chapter 1. Loomings.</h1>
     <p>There now is your insular city of the Manhattoes, belted round by wharves as Indian isles by coral
         reefs—commerce surrounds it with her surf. Right and left, the streets take you waterward. Its
