--- a/tests/ocf-zip-mult/EPUB/content_001.xhtml
+++ b/tests/ocf-zip-mult/EPUB/content_001.xhtml
@@ -3,7 +3,7 @@
     <title>OCF ZIP container splits into segments</title>
   </head>
   <body>
-    <p>Test passes if reading system raises error when loading this epub file and this page of the book can not be accessed.</p>
+    <p>Test passes if reading system raises error when loading this epub file.</p>
     <p>Following is an image to make the epub file large enough (more than 64k) to split</p>
     <img src="/media/imgs/monastery.jpg" alt="Photo of a large medieval building with a church bell tower on its left end." />
   </body>
