--- a/tests/ocf-zip-comp/EPUB/content_001.xhtml
+++ b/tests/ocf-zip-comp/EPUB/content_001.xhtml
@@ -3,6 +3,6 @@
     <title>OCF ZIP container uses compression techniques other than Deflate</title>
   </head>
   <body>
-    <p>Test passes if reading system raises error when loading this epub file and this page of the book can not be accessed.</p>
+    <p>Test passes if reading system raises error when loading this epub file.</p>
   </body>
 </html>
