Added a new test with global reflowable; cosmetic updates on the others.

--- a/tests/fxl-spine-overrides_behave-as-global-bis/EPUB/page_001.xhtml
+++ b/tests/fxl-spine-overrides_behave-as-global-bis/EPUB/page_001.xhtml
@@ -1,10 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
     <head>
-        <title>Override with a reflowable spine item: reflowable document</title>
+        <title>Override with a pre-paginated spine item: reflowable document</title>
     </head>
     <body>
-        <p>This text is long (10 paragraphs), and usually requires several pages to be displayed.</p>
+        <p>Test passes if this and the third page displays properly as a reflowable page, whereas the second page is displayed as a pre-paginated page.</p>
+
+        <p>(This text is long (10 paragraphs), and usually requires several pages to be displayed.)</p>
 
         <div lang="und">
             <p>
