--- a/tests/fxl-spine-overrides_behave-as-global/EPUB/page_001.xhtml
+++ b/tests/fxl-spine-overrides_behave-as-global/EPUB/page_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Rendition Override — pre-paginated page</title>
+    <title>Override with a reflowable spine item: pre-paginated page</title>
     <meta name="viewport" content="width=1000, height=600" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
