--- a/tests/fxl-spine-overrides_behave-as-global/EPUB/nav.xhtml
+++ b/tests/fxl-spine-overrides_behave-as-global/EPUB/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Rendition Override</title>
+    <title>Override with a reflowable spine item</title>
   </head>
   <body>
     <nav epub:type="toc">
