--- a/tests/fxl-spine-overrides_duplicate/EPUB/page_002.xhtml
+++ b/tests/fxl-spine-overrides_duplicate/EPUB/page_002.xhtml
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
     <head>
-        <title>Rendition Override — reflowable page</title>
+        <title>Duplicate rendition override: reflowable document</title>
     </head>
     <body>
-        <p>This text is long (10 paragraphs), and usually requires several pages to be displayed.)</p>
+        <p>This text is long (10 paragraphs), and usually requires several pages to be displayed.</p>
 
         <div lang="und">
             <p>
