--- a/tests/cnt-svg-embedded/EPUB/content_001.xhtml
+++ b/tests/cnt-svg-embedded/EPUB/content_001.xhtml
@@ -4,7 +4,8 @@
   </head>
   <body>
     <p>Test passes if you can see an image.</p>
-    <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="20.4978in" height="18.0152in" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 46296.26 40689.13" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" version="1.1" style="shape-rendering:geometricPrecision; width: 70%;
+    text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 46296.26 40689.13" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
         <style type="text/css">
           <![CDATA[
