--- a/tests/scr-support-fallback/EPUB/content_001.xhtml
+++ b/tests/scr-support-fallback/EPUB/content_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Support for fallback scripted content</title>
+    <title>Support of fallback for scripted content</title>
     <script>
       /**
        * A simple test that proves that scripting is enabled.
