--- a/tests/scr-support-fallback/EPUB/content_fallback.xhtml
+++ b/tests/scr-support-fallback/EPUB/content_fallback.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Support for fallback scripted content — the fallback content</title>
+    <title>Support of fallback for scripted content — the fallback content</title>
   </head>
   <body>
     <p>This reading system does not support scripting, but it followed through the scripted content fallback
