Changed the test descriptions

--- a/tests/mol-audio-no-clipbegin/EPUB/content_001.xhtml
+++ b/tests/mol-audio-no-clipbegin/EPUB/content_001.xhtml
@@ -10,5 +10,9 @@
         <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
         <li>The audio does <em>not</em> start at the beginning of the text but at the title of the publication, name of the reader, etc.</li>
     </ol>
+
+    <p>The Reading System may highlight the text being read with a green background with the text grayed out;
+        but this feature is not required for the test to pass.</p>
+
 </body>
 </html>
