--- a/tests/mol-embed_deactivate_playback/EPUB/content_001.xhtml
+++ b/tests/mol-embed_deactivate_playback/EPUB/content_001.xhtml
@@ -27,7 +27,8 @@
                 the default play/pause control should not be visible
             </li>
             <li>After 30 seconds the first video stops and the second starts while the music plays for another 10 seconds</li>
-            <li>If the Reading System implements styling for media overlays, the active video is framed in green</li>
         </ol>
-    </body>
+        <p>The Reading System may frame the active video in green
+            but this feature is not required for the test to pass.</p>
+        </body>
 </html>
