--- a/tests/mol-embed_fxl/EPUB/content_001.xhtml
+++ b/tests/mol-embed_fxl/EPUB/content_001.xhtml
@@ -12,7 +12,8 @@
             <li>The Reading System provides the user with a way to turn sound on</li>
             <li>On the next page, if sound is turned on, the audio (music) plays and the first video starts automatically</li>
             <li>After 30 seconds the first video stops and the second starts while the music plays for another 10 seconds</li>
-            <li>If the Reading System implements the association with style, the active video is includes in a green frame</li>
         </ol>
+        <p>The Reading System may frame the active video in green
+            but this feature is not required for the test to pass.</p>
     </body>
 </html>
