--- a/tests/mol-timing-synchronization_multiple_audio/EPUB/content_001.xhtml
+++ b/tests/mol-timing-synchronization_multiple_audio/EPUB/content_001.xhtml
@@ -11,5 +11,7 @@
         <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
         <li>The two paragraphs of the text are read without a significant gap between them</li>
     </ol>
+    <p>The Reading System may highlight the text being read with a green background with the text grayed out;
+        but this feature is not required for the test to pass.</p>
 </body>
 </html>
