--- a/tests/mol-tts_multi/EPUB/content_001.xhtml
+++ b/tests/mol-tts_multi/EPUB/content_001.xhtml
@@ -9,7 +9,9 @@
     <ol>
         <li>The Reading System provides the user with a way to turn text reading on</li>
         <li>If turned on, the extract on the next page is read aloud by the Reading System using Text-to-Speech</li>
-        <li>If the Reading System implements styling for media overlays, the text being read is highlighted with a green background and the rest of the text is grayed out</li>
-    </ol>
+     </ol>
+
+    <p>The Reading System may highlight the text being read with a green background with the text grayed out;
+        but this feature is not required for the test to pass.</p>
 </body>
 </html>
