--- a/tests/mol-audio-no-clipend/EPUB/content_001.xhtml
+++ b/tests/mol-audio-no-clipend/EPUB/content_001.xhtml
@@ -9,8 +9,9 @@
     <ol>
         <li>The Reading System provides the user with a way to turn text reading on</li>
         <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
-        <li>If the reading system highlights the active text, then the highlight stops at the second section</li>
         <li>The full text is read</li>
     </ol>
+    <p>The Reading System may highlight the text being read with a green background with the text grayed out;
+        but this feature is not required for the test to pass.</p>
 </body>
 </html>
