--- a/tests/mol-audio/EPUB/content_001.xhtml
+++ b/tests/mol-audio/EPUB/content_001.xhtml
@@ -8,9 +8,11 @@
     <ol>
       <li>The Reading System provides the user with a way to turn text reading on</li>
       <li>When turned on, the extract on the next page is read aloud by the Reading System</li>
-      <li>The reading system highlights the active text</li>
       <li>The full text is read</li>
       <li>No additional text is read (even though the audio file is longer than the text)</li>
     </ol>
+
+    <p>The Reading System may highlight the text being read with a green background with the text grayed out;
+      but this feature is not required for the test to pass.</p>
   </body>
 </html>
