--- a/tests/mol-timing-synchronization_svg/EPUB/content_001.xhtml
+++ b/tests/mol-timing-synchronization_svg/EPUB/content_001.xhtml
@@ -11,8 +11,8 @@
         <ol>
             <li>The Reading System provides the user with a way to turn text reading on</li>
             <li>If turned on, the extract on the next (SVG) page is read aloud by the Reading System</li>
-            <li>If the Reading System implements the association with style information, the text being read is highlighted with a green background and the rest of the text is grayed out</li>
         </ol>
- 
+        <p>The Reading System may highlight the text being read with a green background with the text grayed out;
+            but this feature is not required for the test to pass.</p> 
     </body>
 </html>
