--- a/tests/mol-support_xhtml-load-next/EPUB/content_001.xhtml
+++ b/tests/mol-support_xhtml-load-next/EPUB/content_001.xhtml
@@ -13,7 +13,7 @@
             while read aloud continues without interruption.
         </li>
     </ol>
-    <p>The readings system may highlight the text being read with a green background with the text grayed out;
+    <p>The Reading System may highlight the text being read with a green background with the text grayed out;
         but this feature is not required for the test to pass.</p>
 </body>
 </html>
