--- a/tests/mol-support_xhtml-mid-audio/EPUB/content_001.xhtml
+++ b/tests/mol-support_xhtml-mid-audio/EPUB/content_001.xhtml
@@ -10,7 +10,7 @@
         <li>The Reading System provides the user with a way to turn text reading on</li>
         <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
     </ol>
-    <p>The readings system may highlight the text being read with a green background with the text grayed out;
+    <p>The Reading System may highlight the text being read with a green background with the text grayed out;
         but this feature is not required for the test to pass.</p>
 </body>
 </html>
