Minor language mistake

--- a/tests/mol-support_xhtml-load-next/EPUB/content_001.xhtml
+++ b/tests/mol-support_xhtml-load-next/EPUB/content_001.xhtml
@@ -6,7 +6,7 @@
 <body>
     <p>Test passes (i.e., the Reading System supports playback with XHTML Media document) if</p>
     <ol>
-        <li>The next play is properly displayed as an XHTML content</li>
+        <li>The next page is properly displayed as an XHTML content</li>
         <li>The Reading System provides the user with a way to turn text reading on</li>
         <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
         <li>After the full paragraph is read, the content automatically switches to the next portion of the texts with two more paragraphs, 
