Added a small variant of the SHOULD test

--- a/tests/mol-support_xhtml-load-next/EPUB/content_001.xhtml
+++ b/tests/mol-support_xhtml-load-next/EPUB/content_001.xhtml
@@ -4,7 +4,7 @@
     <title>MO playback switching XHTML content</title>
 </head>
 <body>
-    <p>Test passes (i.e., the Reading System supports playback with XHTML Media document) if</p>
+    <p>Test passes (i.e., the Reading System supports playback of two consecutive XHTML Media documents, using a common MO file) if</p>
     <ol>
         <li>The next page is properly displayed as an XHTML content</li>
         <li>The Reading System provides the user with a way to turn text reading on</li>
